[IMP] Erweiterung der Logik für eq_head_text auf der Rechnung. Ab jetzt kann man mit dem "eq_use_text_from_order" steuern ob man den Default- oder Equitaniatext verwenden will

--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -2786,3 +2786,8 @@ msgstr "KD-USt-IdNr."
 #: field:eq.address.search,categories:0
 msgid "Categories"
 msgstr "Schlagwörter"
+
+#. module: equitania
+#: field:sale.config.settings,eq_use_text_from_order:0
+msgid "Use text from order [equitania]"
+msgstr "Benutze Kopf- und Fusstext aus Auftrag [equitania]"
