[ADD] - Nun werden nur Produkte im Google Shopping Feed angezeigt, wenn das Flag "Im Google Shopping Feed anzeigen" beim Artikel gesetzt und der Artikel im Shop veröffentlicht ist (vorher hat es ausgereicht wenn der Artikel nur veröffentlicht war).

--- a/eq_google_shopping_feed/i18n/de.po
+++ b/eq_google_shopping_feed/i18n/de.po
@@ -193,3 +193,8 @@ msgstr "Code"
 #: view:google.product.taxonomy:eq_google_shopping_feed.google_taxonomy_form_view
 msgid "Google Product Categorie"
 msgstr "Google Produkt Kategorie"
+
+#. module: eq_google_shopping_feed
+#: field:product.template,eq_activate_google_shoppingfeed:0
+msgid "Show in Google Shopping Feed"
+msgstr "Im Google Shopping Feed anzeigen"
